2022-03-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi2tty.[ch], dvistuff.c: Error exit if fail to get font,
	to avoid segmentation fault (do not occur in TeX-DVI, but
	erroneously created in some situation).
	https://github.com/aminophen/dviasm/issues/20
	https://github.com/texjporg/tex-jp-build/issues/138

2021-07-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvi2tty.c, disdvi.c: Apply patch of W32TeX by Kakuto-san.
	(Windows only)

2021-03-04  Karl Berry  <karl@freefriends.org>

	* dvi2tty-src/dvi2tty.1: Fixes from Bjarni Ingi Gislason (and
	further tweaks by me), bugs.debian.org/958728.

2020-12-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvistuff.c: Avoid compiler warnings.

2020-12-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvistuff.c: Allow output of Unicode strings on Windows console.
	It works with "-Eu -q" option. (Windows only)

2017-03-27  Karl Berry  <karl@freefriends.org>

	* Makefile.am (AM_TESTS_ENVIRONMENT): use instead of TESTS_ENVIRONMENT.

2016-04-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* Delete the directory dvi2tty-PATCHES/ because upstream
	has been changed and the TeX Live svn repository is now
	synchronizing with the upstream.

2016-03-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	dvi2tty-6.0.0.
	Support T1,TS1,OT2,T2A,T2B,T2C,X2 encodings.
	Add utf8 output for the latin, cyrillic encodings and
	OML,OMS encodings.
	Add option '-C' not to compose a combining character sequence.
	* dvi2tty.c, dvi2tty.h: Add new option '-C', '-Eu1' and inner flags.
	* tex2ucs.h (new), dvistuff.c: Add utf8 support and new encodings.
	* test/table.tex, table.dvi, dvi2tty.test: Add a new test.
	* table{,c,s,u,uC,Eu,Eu1,EuC,Eua}.tty,
	  testEu.tty, ligtest{u,Eu}.tty (new);
	  test{,s,u}.tty, ligtest.tty (update): Expected output.
	* Makefile{,.am,.in}: Add the new test and the new header file.
	* configure{,.ac}: Update version number.

2016-02-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Makefile.am, configure.ac: New convention.
